--- a/main.html
+++ b/main.html
@@ -8,7 +8,21 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+
+		<table>
+			<thead> 
+			<tr><td>Roll number</td>
+			<td>Name</td> </tr>
+			</thead>
+			<tbody>
+				<tr><td>1</td>
+			<td>Sachin</td>
+					</tr>
+				<tr><td>2</td>
+				<td>aman</td></tr>
+				</tbody>
+		</table>
+    <script type="text/javascript" src="./script.js">		
 </script>
 
 </body>
