--- a/main.html
+++ b/main.html
@@ -4,12 +4,17 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<style>
+table, th, td {
+  border:1px solid black;
+}
+</style>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
 
-		<table>
+		<table >
 			<thead> 
 			<tr><td>Roll number</td>
 			<td>Name</td> </tr>
