--- a/main.html
+++ b/main.html
@@ -20,11 +20,11 @@ table, th, td {
 			<td>Name</td> </tr>
 			</thead>
 			<tbody>
-				<tr><td>1</td>
-			<td>Sachin</td>
-					</tr>
+				<th><tr><td>1</td>
+			<td>Sachin</td></tr></tr>
 				<tr><td>2</td>
-				<td>aman</td></tr>
+				<td>aman</td></tr></th>
+		
 				</tbody>
 		</table>
     <script type="text/javascript" src="./script.js">		
