--- a/main.html
+++ b/main.html
@@ -15,15 +15,15 @@ table, th, td {
 	<!-- the entire body must be written by student -->
 
 		<table >
-			<thead> 
-			<tr><td>Roll number</td>
-			<td>Name</td> </tr>
-			</thead>
+      <thead>
+		 <tr><th>Roll number</th>
+       <th>Name</th> </tr></tr></thead>
+       
 			<tbody>
-				<th><tr><td>1</td>
+			<tr><td>1</td>
 			<td>Sachin</td></tr></tr>
 				<tr><td>2</td>
-				<td>aman</td></tr></th>
+				<td>aman</td></tr>
 		
 				</tbody>
 		</table>
